@@ -17,7 +17,6 @@ import ru.nsu.sports.complex.backend.model.Section;
 import ru.nsu.sports.complex.backend.service.SectionService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.NoSuchElementException;
 
 @RestController
@@ -25,19 +24,19 @@ import java.util.NoSuchElementException;
 @AllArgsConstructor
 public class SectionController {
     private final SectionService service;
-    private final SectionConverter converter;
 
     @Operation(summary = "Получить информацию о секции по id.")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Секция.", content = {
                     @Content(mediaType = "application/json", schema =
                     @Schema(implementation = SectionDTO.class))
-            })})
+            })
+    })
     @GetMapping("/{id}")
     public ResponseEntity<SectionDTO> findById(@PathVariable Integer id) {
         Section section = service.findById(id);
         if (section != null) {
-            return new ResponseEntity<>(converter.sectionToDTO(section), HttpStatus.OK);
+            return new ResponseEntity<>(SectionConverter.sectionToDTO(section), HttpStatus.OK);
         } else {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
@@ -48,7 +47,8 @@ public class SectionController {
             @ApiResponse(responseCode = "200", description = "Секция.", content = {
                     @Content(mediaType = "application/json", schema =
                     @Schema(implementation = Section.class))
-            })})
+            })
+    })
     @GetMapping("/name/{name}")
     public ResponseEntity<Section> findByName(@PathVariable String name) {
         Section section = service.findByName(name);
@@ -64,12 +64,13 @@ public class SectionController {
             @ApiResponse(responseCode = "200", description = "Список секций.", content = {
                     @Content(mediaType = "application/json", schema =
                     @Schema(implementation = List.class))
-            })})
+            })
+    })
     @GetMapping
     public List<SectionDTO> findAllSections() {
         return service.findAllSections().stream()
-                .map(converter::sectionToDTO)
-                .collect(Collectors.toList());
+                .map(SectionConverter::sectionToDTO)
+                .toList();
     }
 
     @Operation(summary = "Создать новую секцию.")
@@ -77,22 +78,34 @@ public class SectionController {
             @ApiResponse(responseCode = "200", description = "Созданная секция.", content = {
                     @Content(mediaType = "application/json", schema =
                     @Schema(implementation = SectionDTO.class))
-            })})
+            })
+    })
     @PostMapping
     public ResponseEntity<SectionDTO> createSection(@RequestBody SectionDTO sectionDTO) {
+        if (sectionDTO.getName().isBlank()) {
+            throw new IllegalArgumentException("Section's name must not be blank!");
+        }
         try {
-            Section newSection = service.createSection(converter.DTOtoSection(sectionDTO));
-            return new ResponseEntity<>(converter.sectionToDTO(newSection), HttpStatus.OK);
+            Section newSection = SectionConverter.dtoToSection(sectionDTO);
+            Section createdSection = service.createSection(newSection);
+            return new ResponseEntity<>(SectionConverter.sectionToDTO(createdSection), HttpStatus.OK);
         } catch (DataIntegrityViolationException e) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
     }
 
+    @Operation(summary = "Обновить поля секции.")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Обновленная секция.", content = {
+                    @Content(mediaType = "application/json", schema =
+                    @Schema(implementation = SectionDTO.class))
+            })
+    })
     @PutMapping("/{id}")
-    public ResponseEntity<Section> updateSection(@PathVariable Integer id, @RequestBody Section section) {
+    public ResponseEntity<SectionDTO> updateSection(@PathVariable Integer id, @RequestBody SectionDTO sectionDTO) {
         try {
-            Section updatedSection = service.updateSection(section, id);
-            return new ResponseEntity<>(updatedSection, HttpStatus.OK);
+            Section updatedSection = service.updateSection(id, sectionDTO);
+            return new ResponseEntity<>(SectionConverter.sectionToDTO(updatedSection), HttpStatus.OK);
         } catch (NoSuchElementException | DataIntegrityViolationException e) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
@@ -103,7 +116,8 @@ public class SectionController {
             @ApiResponse(responseCode = "200", content = {
                     @Content(mediaType = "application/json", schema =
                     @Schema())
-            })})
+            })
+    })
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteSectionById(@PathVariable Integer id) {
         if (service.deleteSectionById(id)) {
@@ -118,7 +132,8 @@ public class SectionController {
             @ApiResponse(responseCode = "200", content = {
                     @Content(mediaType = "application/json", schema =
                     @Schema())
-            })})
+            })
+    })
     @DeleteMapping("/name/{name}")
     public ResponseEntity<Void> deleteSectionByName(@PathVariable String name) {
         if (service.deleteSectionByName(name)) {
